# cppguitemp

./: .clang-format  .gitattributes  .gitignore  .gitmodules  ;  CMakeLists.txt  README.md  _.swp  flake.nix  imgui.ini
glad/include/glad/: glad.h
lib/: CMakeLists.txt
lib/qrlx/: CMakeLists.txt
lib/qrlx/include/: ablank  app.hpp  color.hpp  engine.hpp  graphics.hpp  iapp.hpp  irendering_backend.hpp  log.hpp  opengl_rendering_backend.hpp  qrlx.hpp  shader.hpp  vector2f.hpp  window.hpp
lib/qrlx/src/: app.cxx  color.cxx  engine.cpp  engine.cxx  graphics.cxx  shader.cpp  shader.cxx  window.cpp  window.cxx
resources/: cubes.frag  mandelbrot.frag  mandelbrot.vert  plot.frag  plot.vert
src/: CMakeLists.txt  cppPlot.cpp  cpplot.cxx  imgui.ini  main.cpp
src/3dtest/: CMakeLists.txt  app.cpp  app.cxx  app.hpp  main.cpp  main.cxx
src/cpplot/: CMakeLists.txt  main.cxx  plot.cpp  plotapp.cxx  plotapp.hpp
src/fractals/: CMakeLists.txt  fract_view.cpp
